src/test/grammar/antlr/src/generated/IfaParser.java
// Generated from /home/bpdp/kerjaan/git-repos/vastix/jifa/src/main/antlr/Ifa.g4 by ANTLR 4.5.1

package name.bpdp.vastix.jifa.generated;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IfaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, Q_RESERVED=27, MARK=28, DIGIT=29, ALPHA=30, HEX_LETTER=31, 
		WS=32;
	public static final int
		RULE_stat = 0, RULE_force = 1, RULE_representatives = 2, RULE_directives = 3, 
		RULE_commissives = 4, RULE_expressives = 5, RULE_declaratives = 6, RULE_propositional = 7, 
		RULE_url = 8, RULE_scheme = 9, RULE_hier_part = 10, RULE_net_path = 11, 
		RULE_abs_path = 12, RULE_segment = 13, RULE_pchar = 14, RULE_server = 15, 
		RULE_port = 16, RULE_host = 17, RULE_hostname = 18, RULE_domainlabel = 19, 
		RULE_toplabel = 20, RULE_ipV4Address = 21, RULE_fragment_ = 22, RULE_query = 23, 
		RULE_param = 24, RULE_pname = 25, RULE_pvalue = 26, RULE_qc = 27, RULE_uric = 28, 
		RULE_unreserved = 29, RULE_escaped = 30, RULE_hex = 31, RULE_alphanum = 32, 
		RULE_reserved = 33;
	public static final String[] ruleNames = {
		"stat", "force", "representatives", "directives", "commissives", "expressives", 
		"declaratives", "propositional", "url", "scheme", "hier_part", "net_path", 
		"abs_path", "segment", "pchar", "server", "port", "host", "hostname", 
		"domainlabel", "toplabel", "ipV4Address", "fragment_", "query", "param", 
		"pname", "pvalue", "qc", "uric", "unreserved", "escaped", "hex", "alphanum", 
		"reserved"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'ASSERT'", "'INFORM'", "'REQUEST'", "'CONSENT'", 
		"'APOLOGIZE'", "'THANK'", "'COMPLAIN'", "'DECLARE'", "':'", "'http'", 
		"'https'", "'?'", "'#'", "'//'", "'/'", "'@'", "'&'", "'='", "'+'", "'$'", 
		"','", "'.'", "'-'", "'%'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "Q_RESERVED", "MARK", "DIGIT", "ALPHA", "HEX_LETTER", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Ifa.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IfaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StatContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(IfaParser.EOF, 0); }
		public List<ForceContext> force() {
			return getRuleContexts(ForceContext.class);
		}
		public ForceContext force(int i) {
			return getRuleContext(ForceContext.class,i);
		}
		public List<PropositionalContext> propositional() {
			return getRuleContexts(PropositionalContext.class);
		}
		public PropositionalContext propositional(int i) {
			return getRuleContext(PropositionalContext.class,i);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitStat(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(68);
				force();
				setState(69);
				match(T__0);
				setState(71); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(70);
					propositional();
					}
					}
					setState(73); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__11 || _la==T__12 );
				setState(75);
				match(T__1);
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9))) != 0) );
			setState(81);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForceContext extends ParserRuleContext {
		public RepresentativesContext representatives() {
			return getRuleContext(RepresentativesContext.class,0);
		}
		public DirectivesContext directives() {
			return getRuleContext(DirectivesContext.class,0);
		}
		public CommissivesContext commissives() {
			return getRuleContext(CommissivesContext.class,0);
		}
		public ExpressivesContext expressives() {
			return getRuleContext(ExpressivesContext.class,0);
		}
		public DeclarativesContext declaratives() {
			return getRuleContext(DeclarativesContext.class,0);
		}
		public ForceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_force; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterForce(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitForce(this);
		}
	}

	public final ForceContext force() throws RecognitionException {
		ForceContext _localctx = new ForceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_force);
		try {
			setState(88);
			switch (_input.LA(1)) {
			case T__2:
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				representatives();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				directives();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				commissives();
				}
				break;
			case T__6:
			case T__7:
			case T__8:
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				expressives();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 5);
				{
				setState(87);
				declaratives();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepresentativesContext extends ParserRuleContext {
		public RepresentativesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_representatives; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterRepresentatives(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitRepresentatives(this);
		}
	}

	public final RepresentativesContext representatives() throws RecognitionException {
		RepresentativesContext _localctx = new RepresentativesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_representatives);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_la = _input.LA(1);
			if ( !(_la==T__2 || _la==T__3) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectivesContext extends ParserRuleContext {
		public DirectivesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directives; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterDirectives(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitDirectives(this);
		}
	}

	public final DirectivesContext directives() throws RecognitionException {
		DirectivesContext _localctx = new DirectivesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_directives);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommissivesContext extends ParserRuleContext {
		public CommissivesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commissives; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterCommissives(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitCommissives(this);
		}
	}

	public final CommissivesContext commissives() throws RecognitionException {
		CommissivesContext _localctx = new CommissivesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_commissives);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressivesContext extends ParserRuleContext {
		public ExpressivesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressives; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterExpressives(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitExpressives(this);
		}
	}

	public final ExpressivesContext expressives() throws RecognitionException {
		ExpressivesContext _localctx = new ExpressivesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expressives);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarativesContext extends ParserRuleContext {
		public DeclarativesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaratives; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterDeclaratives(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitDeclaratives(this);
		}
	}

	public final DeclarativesContext declaratives() throws RecognitionException {
		DeclarativesContext _localctx = new DeclarativesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaratives);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropositionalContext extends ParserRuleContext {
		public UrlContext url() {
			return getRuleContext(UrlContext.class,0);
		}
		public PropositionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propositional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterPropositional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitPropositional(this);
		}
	}

	public final PropositionalContext propositional() throws RecognitionException {
		PropositionalContext _localctx = new PropositionalContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_propositional);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			url();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UrlContext extends ParserRuleContext {
		public SchemeContext scheme() {
			return getRuleContext(SchemeContext.class,0);
		}
		public Hier_partContext hier_part() {
			return getRuleContext(Hier_partContext.class,0);
		}
		public UrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_url; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterUrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitUrl(this);
		}
	}

	public final UrlContext url() throws RecognitionException {
		UrlContext _localctx = new UrlContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_url);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			scheme();
			setState(103);
			match(T__10);
			setState(104);
			hier_part();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SchemeContext extends ParserRuleContext {
		public SchemeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scheme; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterScheme(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitScheme(this);
		}
	}

	public final SchemeContext scheme() throws RecognitionException {
		SchemeContext _localctx = new SchemeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_scheme);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_la = _input.LA(1);
			if ( !(_la==T__11 || _la==T__12) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Hier_partContext extends ParserRuleContext {
		public Net_pathContext net_path() {
			return getRuleContext(Net_pathContext.class,0);
		}
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public Fragment_Context fragment_() {
			return getRuleContext(Fragment_Context.class,0);
		}
		public Hier_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hier_part; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterHier_part(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitHier_part(this);
		}
	}

	public final Hier_partContext hier_part() throws RecognitionException {
		Hier_partContext _localctx = new Hier_partContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_hier_part);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			net_path();
			setState(111);
			_la = _input.LA(1);
			if (_la==T__13) {
				{
				setState(109);
				match(T__13);
				setState(110);
				query();
				}
			}

			setState(115);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(113);
				match(T__14);
				setState(114);
				fragment_();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Net_pathContext extends ParserRuleContext {
		public ServerContext server() {
			return getRuleContext(ServerContext.class,0);
		}
		public Abs_pathContext abs_path() {
			return getRuleContext(Abs_pathContext.class,0);
		}
		public Net_pathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_net_path; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterNet_path(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitNet_path(this);
		}
	}

	public final Net_pathContext net_path() throws RecognitionException {
		Net_pathContext _localctx = new Net_pathContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_net_path);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(T__15);
			setState(118);
			server();
			setState(120);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(119);
				abs_path();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Abs_pathContext extends ParserRuleContext {
		public List<SegmentContext> segment() {
			return getRuleContexts(SegmentContext.class);
		}
		public SegmentContext segment(int i) {
			return getRuleContext(SegmentContext.class,i);
		}
		public Abs_pathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abs_path; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterAbs_path(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitAbs_path(this);
		}
	}

	public final Abs_pathContext abs_path() throws RecognitionException {
		Abs_pathContext _localctx = new Abs_pathContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_abs_path);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(122);
				match(T__16);
				setState(123);
				segment();
				}
				}
				setState(126); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__16 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SegmentContext extends ParserRuleContext {
		public List<PcharContext> pchar() {
			return getRuleContexts(PcharContext.class);
		}
		public PcharContext pchar(int i) {
			return getRuleContext(PcharContext.class,i);
		}
		public SegmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_segment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterSegment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitSegment(this);
		}
	}

	public final SegmentContext segment() throws RecognitionException {
		SegmentContext _localctx = new SegmentContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_segment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(128);
				pchar();
				}
				}
				setState(131); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__25) | (1L << MARK) | (1L << DIGIT) | (1L << ALPHA))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PcharContext extends ParserRuleContext {
		public EscapedContext escaped() {
			return getRuleContext(EscapedContext.class,0);
		}
		public UnreservedContext unreserved() {
			return getRuleContext(UnreservedContext.class,0);
		}
		public PcharContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pchar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterPchar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitPchar(this);
		}
	}

	public final PcharContext pchar() throws RecognitionException {
		PcharContext _localctx = new PcharContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_pchar);
		try {
			setState(142);
			switch (_input.LA(1)) {
			case T__25:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				escaped();
				}
				break;
			case MARK:
			case DIGIT:
			case ALPHA:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				unreserved();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				match(T__10);
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 4);
				{
				setState(136);
				match(T__17);
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 5);
				{
				setState(137);
				match(T__18);
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 6);
				{
				setState(138);
				match(T__19);
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 7);
				{
				setState(139);
				match(T__20);
				}
				break;
			case T__21:
				enterOuterAlt(_localctx, 8);
				{
				setState(140);
				match(T__21);
				}
				break;
			case T__22:
				enterOuterAlt(_localctx, 9);
				{
				setState(141);
				match(T__22);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ServerContext extends ParserRuleContext {
		public HostContext host() {
			return getRuleContext(HostContext.class,0);
		}
		public PortContext port() {
			return getRuleContext(PortContext.class,0);
		}
		public ServerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_server; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterServer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitServer(this);
		}
	}

	public final ServerContext server() throws RecognitionException {
		ServerContext _localctx = new ServerContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_server);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			host();
			setState(147);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(145);
				match(T__10);
				setState(146);
				port();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PortContext extends ParserRuleContext {
		public List<TerminalNode> DIGIT() { return getTokens(IfaParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(IfaParser.DIGIT, i);
		}
		public PortContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterPort(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitPort(this);
		}
	}

	public final PortContext port() throws RecognitionException {
		PortContext _localctx = new PortContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_port);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(149);
				match(DIGIT);
				}
				}
				setState(152); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DIGIT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HostContext extends ParserRuleContext {
		public HostnameContext hostname() {
			return getRuleContext(HostnameContext.class,0);
		}
		public IpV4AddressContext ipV4Address() {
			return getRuleContext(IpV4AddressContext.class,0);
		}
		public HostContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_host; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).enterHost(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IfaListener ) ((IfaListener)listener).exitHost(this);
		}
	}

	public final HostContext host() throws RecognitionException {
		HostContext _localctx = new HostContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_host);
		try {
			setState(156);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(154);
				hostname();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				ipV4Address();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
